[GSM is Greg Sabino Mullane <greg@endpoint.com> <greg@turnstep.com> ]

3.0.8 (unreleased)

  - Filter out inactive target dbs from bucardo-report script.
    [Spencer Christensen <schristensen@backcountry.com>]

  - Auto-detect primary keys (or unique indexes) for added tables. [GSM]

  - Add update_bucardo_schema.pl to faciliate version changes. [GSM]

  - Use correct quoted/non-quoted versions of primary keys to allow 
    primary keys with spaces, etc. [GSM]

  - Add new options to log_showtime to show non-epoch time strings [GSM]

  - Fix a sorting problem in the bucardo-report script. [Jon Jensen <jon@endpoint.com>]

  - Fix problem with after_sync code not firing at correct time for staylive kids. [GSM]

3.0.7 Released October 11, 2007

 - Allow bucardo_ctl options to be specified in a .bucardorc file. [GSM]

 - Add new index to bucardo_delta for faster purging. [GSM]

 - Add a BSD-style rc file in the scripts directory. [Ben Allen <bsa@lanl.gov>]

 - Activate the "latest" standard_conflict method. [GSM]

 - Fix error for tables with primary key and no other columns in pushdelta/swap syncs, 
   per report from Ben Allen. [GSM]

 - Change pid and ppid columns in table "q" from smallint to integer. [Ben Allen <bsa@lanl.gov>]

 - Ensure sourcedbh used by customcode has inactivedestroy set. [GSM]

 - Find system grep rather than hard-coding the path [Jeff Boes <jeff@endpoint.com>]

 - Fix for tests: make third database have a default password. [GSM]

 - Add ping method to CTL and KID processes. [GSM]


3.0.6 - First public release, September 2007
