@@ -2,7 +2,7 @@
 
 ## The main Bucardo program
 ##
-## Copyright 2006-2007 Greg Sabino Mullane <greg@endpoint.com>
+## Copyright 2006-2008 Greg Sabino Mullane <greg@endpoint.com>
 
 package Bucardo;
 use 5.008003;
@@ -4930,7 +4930,7 @@ Greg Sabino Mullane <greg@endpoint.com>
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (c) 2005-2007 Greg Sabino Mullane <greg@endpoint.com>.
+Copyright (c) 2005-2008 Greg Sabino Mullane <greg@endpoint.com>.
 
 This software is free to use: see the LICENSE file for details.
 
