@@ -1,4 +1,4 @@
-Copyright (c) 2005, 2006, 2007
+Copyright (c) 2005, 2006, 2007, 2008
   Greg Sabino Mullane <greg@endpoint.com>. All rights reserved.
 
 Redistribution and use in source and binary forms, with or without 
