@@ -2,7 +2,7 @@
 
 ## Script to control Bucardo
 ##
-## Copyright 2006-2007 Greg Sabino Mullane <greg@endpoint.com>
+## Copyright 2006-2008 Greg Sabino Mullane <greg@endpoint.com>
 
 use strict;
 use warnings;
@@ -1357,7 +1357,7 @@ Bucardo
 
 =head1 COPYRIGHT
 
-Copyright 2006-2007 Greg Sabino Mullane <greg@endpoint.com>
+Copyright 2006-2008 Greg Sabino Mullane <greg@endpoint.com>
 
 This program is free to use, subject to the limitations in the LICENSE file.
 
