@@ -423,7 +423,7 @@ taken with a grain of salt.</p>
 </p>
 <hr />
 <h1><a name="copyright">COPYRIGHT</a></h1>
-<p>Copyright 2006-2007 Greg Sabino Mullane &lt;<a href="mailto:greg@endpoint.com">greg@endpoint.com</a>&gt;</p>
+<p>Copyright 2006-2008 Greg Sabino Mullane &lt;<a href="mailto:greg@endpoint.com">greg@endpoint.com</a>&gt;</p>
 <p>This program is free to use, subject to the limitations in the LICENSE file.</p>
 
 </body>
