@@ -2,6 +2,9 @@
 
 3.0.8 (unreleased)
 
+  - Fix race condition in bucardo_delta/bucardo_track updates 
+    for pushdelta syncs. [GSM]
+
   - Filter out inactive target dbs from bucardo-report script.
     [Spencer Christensen <schristensen@backcountry.com>]
 
